Fix devtools unable to start a shared workers.

This regressed in r419646 because it changed a check for the request's process being alive to instead check if the WebContents is alive. The latter isn't true for worker-initiated requests.

Since URLDataManagerBackend's behavior now changed back to what it used to do, I've also updated the data sources that were modified in the same cl to bring back WebContents null checks.

BUG=652937

Review-Url: https://codereview.chromium.org/2393773002
Cr-Commit-Position: refs/heads/master@{#423205}

Former-commit-id: f72ebb00ab29f5ed639d24dd24b44f4ea6201a42