chrome/browser/ui/webui/ntp/new_tab_ui.cc
@@ -205,8 +205,9 @@ void NewTabUI::NewTabHTMLSource::StartDataRequest(
     return;
   }
 
+  content::WebContents* web_contents = wc_getter.Run();
   content::RenderProcessHost* render_host =
-      wc_getter.Run()->GetRenderProcessHost();
+      web_contents ? web_contents->GetRenderProcessHost() : nullptr;
   NTPResourceCache::WindowType win_type = NTPResourceCache::GetWindowType(
       profile_, render_host);
   scoped_refptr<base::RefCountedMemory> html_bytes(
